# AnimeApi

./: Cargo.toml  config-sample.toml  config.toml
src/: main.rs
src/database/: handler.rs
src/entity/: condition.rs  config.rs  image_detail.rs  mod.rs  status.rs
src/route/: api.rs  main_page.rs  mod.rs
src/util/: ipcheck.rs  mod.rs
www/: index.html
www/assets/css/: styles.css
