[package]
name = "AnimeApi"
version = "0.1.0"
authors = ["image <image@by.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0-alpha"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.123"
futures = "0.3.12"
toml = "0.5.0"