[package]
name = "AnimeApi"
version = "0.1.0"
authors = ["image <image@by.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0-alpha"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
headers = "0.3.3"
serde = "1.0.123"
serde_json = "1.0"
futures = "0.3.18"
toml = "0.5.0"
rust-embed = "5.9.0"

log = "0.4"
fast_log="1.4"
